--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -20,3 +20,11 @@
   border-radius: 10px;
   border: 1px solid black;
 }
+
+.parcelTypeItem {
+  margin-top: 15px;
+}
+
+#weightErrorMessage {
+  color: rgb(255, 107, 107);
+}
