--- a/src/components/RatesCard.css
+++ b/src/components/RatesCard.css
@@ -3,8 +3,35 @@
     border-radius: 5px;
     padding: 2px 10px;
 }
+
 .detailsGrid {
-    margin: 25px;
+    margin: 20px;
+    /* border: 1px solid black; */
+    border-radius: 12px;
+    background: var(--ion-color-light);
+}
+
+.detailsGrid ion-row:nth-child(1) {
+    background: var(--ion-color-dark);
+    color: var(--ion-color-light);
+    font-weight: bold;
+}
+
+.ratesGrid ion-list ion-item  {
+    --background:var(--ion-color-light);
+}
+
+ion-list ion-item ion-col:nth-child(1) {
+    flex: 3
+}
+ion-list ion-item ion-col:nth-child(2) {
+    flex: 1
+}
+ion-list ion-item ion-col:nth-child(3) {
+    flex: 3
+}
+ion-list ion-item ion-col:nth-child(4) {
+    flex: 0.5
 }
 
 .detailsGrid ion-row ion-col:nth-child(1) {
@@ -15,27 +42,21 @@
     flex: 2;
 }
 
-.detailsGrid ion-row:nth-child(1) ion-col:nth-child(2) {
-    color: lightgray;
-}
-
-ion-row:nth-child(1) {
-    background-color: rgb(41, 41, 41);
-}
 .valueCol {
     text-align: right;
 }
 
-.nameCol {
-    color: rgb(159, 159, 159);
-    /* font-size: 1; */
-}
-
-.totalRowNonGst .totalRowGst{
-    background-color: rgb(41, 41, 41);
-}
-
 .totalRow {
     font-weight: bold;
-    background-color: rgb(34, 34, 34);
+}
+
+.nameCol {
+    color: rgb(159, 159, 159);
+}
+
+.parcelTypeBadge {
+    margin-left: 10px;
+    margin-top: 12px;
+    font-size: 15px;
+    padding: 5px 15px;
 }
