--- a/src/components/RatesCard.css
+++ b/src/components/RatesCard.css
@@ -42,6 +42,11 @@ ion-list ion-item ion-col:nth-child(4) {
     flex: 2;
 }
 
+.detailsGrid ion-row:last-child {
+    font-weight: bold;
+    background-color: rgb(19, 19, 19);
+}
+
 .valueCol {
     text-align: right;
 }
