--- a/src/components/RatesCard.css
+++ b/src/components/RatesCard.css
@@ -44,19 +44,22 @@ ion-list ion-item ion-col:nth-child(4) {
 
 .detailsGrid ion-row:last-child {
     font-weight: bold;
-    background-color: rgb(19, 19, 19);
+    /* background-color: var(--ion-color-dark);
+    color: var(--ion-color-light); */
+}
+
+.detailsGrid ion-row:last-child::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: var(--ion-color-medium);
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .valueCol {
     text-align: right;
-}
-
-.totalRow {
-    font-weight: bold;
-}
-
-.nameCol {
-    color: rgb(159, 159, 159);
 }
 
 .parcelTypeBadge {
