--- a/src/components/RatesCard.css
+++ b/src/components/RatesCard.css
@@ -1,70 +1,73 @@
 .detailsGrid ion-row {
-    /* border: 0.5px solid rgb(76, 76, 76); */
-    border-radius: 5px;
-    padding: 2px 10px;
+  /* border: 0.5px solid rgb(76, 76, 76); */
+  border-radius: 5px;
+  padding: 2px 10px;
 }
 
 .detailsGrid {
-    margin: 20px;
-    /* border: 1px solid black; */
-    border-radius: 12px;
-    background: var(--ion-color-light);
+  margin: 20px;
+  /* border: 1px solid black; */
+  border-radius: 12px;
+  background: var(--ion-color-light);
 }
 
 .detailsGrid ion-row:nth-child(1) {
-    background: var(--ion-color-dark);
-    color: var(--ion-color-light);
-    font-weight: bold;
+  background: var(--ion-color-dark);
+  color: var(--ion-color-light);
+  font-weight: bold;
 }
 
-.ratesGrid ion-list ion-item  {
-    --background:var(--ion-color-light);
+.ratesGrid ion-list ion-item {
+  --background: var(--ion-color-light);
 }
 
 ion-list ion-item ion-col:nth-child(1) {
-    flex: 3
+  flex: 2;
 }
 ion-list ion-item ion-col:nth-child(2) {
-    flex: 1
+  flex: 2;
 }
 ion-list ion-item ion-col:nth-child(3) {
-    flex: 3
+  flex: 2;
 }
 ion-list ion-item ion-col:nth-child(4) {
-    flex: 0.5
+  flex: 2;
+}
+ion-list ion-item ion-col:nth-child(5) {
+  flex: 1;
 }
 
 .detailsGrid ion-row ion-col:nth-child(1) {
-    flex: 3;
+  flex: 3;
 }
 
 .detailsGrid ion-row ion-col:nth-child(2) {
-    flex: 2;
+  flex: 2;
 }
 
 .detailsGrid ion-row:last-child {
-    font-weight: bold;
-    /* background-color: var(--ion-color-dark);
+  font-weight: bold;
+  /* background-color: var(--ion-color-dark);
     color: var(--ion-color-light); */
 }
 
 .detailsGrid ion-row:last-child::before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: var(--ion-color-medium);
-    margin-top: 5px;
-    margin-bottom: 5px;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: var(--ion-color-medium);
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .valueCol {
-    text-align: right;
+  text-align: right;
 }
 
 .parcelTypeBadge {
-    margin-left: 10px;
-    margin-top: 12px;
-    font-size: 15px;
-    padding: 5px 15px;
+  margin-left: 10px;
+  margin-top: 12px;
+  font-size: 15px;
+  padding: 5px 15px;
 }
